# RenderGL

./: .gitmodules  CMakeLists.txt  README.md  glad.c  main.cpp  vcpkg.json
assets/: shader.frag  shader.vert  suzanne.mtl  teapot.mtl
assets/salletHelmet/: SalletHelmet.fbx
gui/: MainGUI.cpp  MainGUI.h
interface/: InputInterface.cpp  InputInterface.h  Interface.cpp  Interface.h  MaterialInterface.cpp  MaterialInterface.h  MeshParser.cpp  MeshParser.h  ModelInterface.h  ParsedMesh.h  SceneImporter.cpp  SceneImporter.h  interface.cpp  interface.h
libraries/glad/: glad.h
libraries/imgui/: CMakeLists.txt  imgui.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
libraries/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
libraries/imgui/docs/: BACKENDS.md  CHANGELOG.txt  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  README.md  TODO.txt
libraries/imgui/examples/: README.txt
libraries/imgui/examples/example_android_opengl3/: CMakeLists.txt
libraries/imgui/examples/example_emscripten_wgpu/: README.md  main.cpp
libraries/imgui/examples/example_glfw_opengl2/: main.cpp
libraries/imgui/examples/example_glfw_opengl3/: main.cpp
libraries/imgui/examples/example_glfw_vulkan/: CMakeLists.txt  main.cpp
libraries/imgui/examples/example_sdl2_opengl3/: README.md
libraries/imgui/examples/example_sdl3_opengl3/: README.md
libraries/imguizmo/: CMakeLists.txt
renderer/: Camera.cpp  Camera.h  DepthFrameBuffer.cpp  DepthFrameBuffer.h  DirectionalLight.h  FrameBuffer.cpp  FrameBuffer.h  GameObject.cpp  GameObject.h  LightUniformBlock.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderMaterial.h  Scene.cpp  Scene.h  SceneUniformBlock.h  Shaders.h  StandardMaterial.h  Texture.h  Transform.h
renderer/Buffers/: DepthFrameBuffer.h  FrameBuffer.cpp  FrameBuffer.h
renderer/Lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.h
renderer/Materials/: DepthMaterial.h  Material.cpp  Material.h  PBRMaterial.h  RenderMaterial.h  SkyboxMaterial.h  StandardMaterial.h
renderer/Misc/: BoundingBox.cpp  BoundingBox.h  Helpers.h
shaders/: depthShader.frag  depthShader.vert  gizmo.frag  lit.frag  lit.vert  pbr.frag  skybox.frag  skybox.vert  unlit.frag
